# film-recommendations

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
docs/: index.md  modules.md
notebooks/: first_model.ipynb
src/film_recoomendations/: constants.py  data_access.py  foo.py  ml_fitting.py  preprocessing.py
tests/: conftest.py  test_data_access.py  test_foo.py  test_ml_fitting.py  test_preprocessing.py
